css-style: responsive title

--- a/src/components/Title/index.scss
+++ b/src/components/Title/index.scss
@@ -26,7 +26,10 @@
 }
 
 @include m.mobile {
+  .sub-title {
+    font-size: m.size(small-0);
+  }
   .title {
-    font-size: m.size(large-10);
+    font-size: m.size(large-6);
   }
 }
