--- a/src/globalStyles/_variables.scss
+++ b/src/globalStyles/_variables.scss
@@ -6,6 +6,8 @@ $size: (
   huge-1: 5rem,
   huge-0: 4rem,
   large-10: 2.625rem,
+  large-9: 2.5rem,
+  large-8: 2.375rem,
   large-6: 1.825rem,
   large-5: 1.75rem,
   large-4: 1.625rem,
